--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         left:50%;
     }
     html{
-        background-image:url(media/xpBackground.png);
+        background-image:url(media/loginBackground.png);
         background-size:100% 100%; 
         background-repeat: no-repeat;
     }
@@ -41,6 +41,7 @@
     }
     #new:hover{
         font-size: 108%;
+        cursor: pointer;
     }
     #loginP{
         color: white;
