--- a/public/dep.html
+++ b/public/dep.html
@@ -1,3 +1,4 @@
+
 <container id="depSelectContainer">
     <audio id="audio">
         <source src="media/boot.mp3">
@@ -6,6 +7,12 @@
     <option selected disabled value="start">Select department</option>
 </select><br>
 <button onclick="go()">Go!</button>
+</container>
+<container id="requestPanel">
+    <select id="RequestDepartmentSelect">
+        <option selected disabled value="start">Request Department</option>
+    </select><br>
+    <button onclick="sendRequest()">Send Request</button>
 </container>
 <style>
 html{
@@ -28,14 +35,28 @@ html{
 #depSelect{
     text-align:center;
 }
+#requestPanel{
+    background-color:rgb(191, 188, 188);
+    padding:5%;
+    text-align: center;
+    position:absolute;
+    top:35%;
+    left:60%;
+    border-color:rgb(133, 131, 131);
+    border-style:solid;
+    border-width:10px;
+    border-radius: 20%;
+}
 </style>
 <script src="/socket.io/socket.io.js"></script>
+<script>var socket = io()
+</script>
+<script src="/script/public.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
 <script>
-    var socket = io()
     $(function(){
         if(localStorage.getItem("username") && localStorage.getItem("key")){
             socket.emit("check", localStorage.getItem("username"), localStorage.getItem("key"), true)
@@ -65,6 +86,16 @@ html{
             window.location.href="loggedin.html"
         }
     }
+    function sendRequest(){
+        var value = document.getElementById("RequestDepartmentSelect")
+        var selectValue = value.options[value.selectedIndex].value
+        if(selectValue == "start"){
+            alert("Please select a department to request first")
+        }
+        else{
+            socket.emit("newDepRequest", localStorage.getItem("username"), selectValue)
+        }
+    }
     socket.on("notAllowed", () => {
         window.location.href="index.html"
     })
@@ -72,6 +103,18 @@ html{
         for(var i = 0; i<array.length; i++){
             $("#depSelect").append("<option value='"+array[i]+"'>"+array[i]+"</option")
         }
+        allDepartments.forEach(department => {
+                if(!array.includes(department)){
+                    console.log(`append ran ${department}`)
+                    $("#RequestDepartmentSelect").append(`<option value=${department}>${department}</option>`)
+                }
     })
+    socket.on("requestMade", () => {
+        console.log("requestMade")
+        alert("Request has been sent. You will be alerted via mail when you request has been approved or declined")
+    })
+    socket.on("alreadyRequested", () => {
+        alert("This request has allready been sent. You will be alerted via email when you request has been proccesed")
+    })
+})
 </script>
-<script src="/script/public.js"></script>
